// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadEmbargoDate should display the clear field 1`] = `
<LocalizationProvider
  dateAdapter={[Function]}
>
  <ForwardRef(DatePicker)
    InputProps={
      Object {
        "data-analyticsid": "undefined-input",
        "data-testid": "undefined-input",
        "disableUnderline": true,
      }
    }
    inputFormat="DD/MM/YYYY"
    minDate={2016-01-01T00:00:00.000Z}
    onChange={[Function]}
    renderInput={[Function]}
    value={2016-01-01T00:00:00.000Z}
  />
</LocalizationProvider>
`;

exports[`Component FileUploadEmbargoDate should render disabled 1`] = `
<LocalizationProvider
  dateAdapter={[Function]}
>
  <ForwardRef(DatePicker)
    InputProps={
      Object {
        "data-analyticsid": "undefined-input",
        "data-testid": "undefined-input",
        "disableUnderline": true,
      }
    }
    disabled={true}
    inputFormat="DD/MM/YYYY"
    minDate={2016-01-01T00:00:00.000Z}
    onChange={[Function]}
    renderInput={[Function]}
    value={2016-01-01T00:00:00.000Z}
  />
</LocalizationProvider>
`;

exports[`Component FileUploadEmbargoDate should render with default setup 1`] = `
<LocalizationProvider
  dateAdapter={[Function]}
>
  <ForwardRef(DatePicker)
    InputProps={
      Object {
        "data-analyticsid": "undefined-input",
        "data-testid": "undefined-input",
        "disableUnderline": true,
      }
    }
    inputFormat="DD/MM/YYYY"
    minDate={2016-01-01T00:00:00.000Z}
    onChange={[Function]}
    renderInput={[Function]}
    value={2016-01-01T00:00:00.000Z}
  />
</LocalizationProvider>
`;

exports[`Component FileUploadEmbargoDate should render with default setup with styles 1`] = `
<LocalizationProvider
  dateAdapter={[Function]}
>
  <ForwardRef(DatePicker)
    InputProps={
      Object {
        "data-analyticsid": "undefined-input",
        "data-testid": "undefined-input",
        "disableUnderline": true,
      }
    }
    inputFormat="DD/MM/YYYY"
    minDate={2016-01-01T00:00:00.000Z}
    onChange={[Function]}
    renderInput={[Function]}
    value={2016-01-01T00:00:00.000Z}
  />
</LocalizationProvider>
`;

exports[`Component FileUploadEmbargoDate should render with no supplied date 1`] = `
<LocalizationProvider
  dateAdapter={[Function]}
>
  <ForwardRef(DatePicker)
    InputProps={
      Object {
        "data-analyticsid": "undefined-input",
        "data-testid": "undefined-input",
        "disableUnderline": true,
      }
    }
    inputFormat="DD/MM/YYYY"
    minDate={2016-01-01T00:00:00.000Z}
    onChange={[Function]}
    renderInput={[Function]}
    value={null}
  />
</LocalizationProvider>
`;

exports[`Component FileUploadEmbargoDate should set correct date on date changed 1`] = `
<LocalizationProvider
  dateAdapter={[Function]}
>
  <ForwardRef(DatePicker)
    InputProps={
      Object {
        "data-analyticsid": "undefined-input",
        "data-testid": "undefined-input",
        "disableUnderline": true,
      }
    }
    inputFormat="DD/MM/YYYY"
    minDate={2016-01-01T00:00:00.000Z}
    onChange={[Function]}
    renderInput={[Function]}
    value={2016-01-01T00:00:00.000Z}
  />
</LocalizationProvider>
`;

exports[`Component FileUploadEmbargoDate should set correct date on date changed 2`] = `
<LocalizationProvider
  dateAdapter={[Function]}
>
  <ForwardRef(DatePicker)
    InputProps={
      Object {
        "data-analyticsid": "undefined-input",
        "data-testid": "undefined-input",
        "disableUnderline": true,
      }
    }
    inputFormat="DD/MM/YYYY"
    minDate={2016-01-01T00:00:00.000Z}
    onChange={[Function]}
    renderInput={[Function]}
    value={2016-01-01T00:00:00.000Z}
  />
</LocalizationProvider>
`;
